fix: long flag report strings causing overflow outside of container boundary

--- a/less/flags.less
+++ b/less/flags.less
@@ -13,6 +13,7 @@
         blockquote {
             margin: 0;
             margin-top: 1rem;
+            overflow-wrap: break-word;
         }
     }
 
